# particula

./: .adw-docs-manifest.yaml  .buildinfo  .flake8  .gitignore  .gitmodules  .opencode-preserve.yaml  .pre-commit-config.yaml  .todowrite.md  000_beginnings.html  001_ParticleClass.html  001_particle.html  404.html  AGENTS.md  ARCHITECTURE_SUMMARY.txt  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FAQ.html  LICENSE  MANIFEST.in  README.md  citation  conftest.py  contrib_docs.html  genindex.html  getting_started.html  gpu_benchmark_results.json  index.html  index.md  intro.html  jupytext.toml  mk_generator.py  mkdocs.yml  notes.ipynb  objects.inv  pyproject.toml  pytest.ini  (+9 more)
.claude/: README.md  README_ARCHITECTURE_DOCS.md  TESTING_AND_LINTING.md
.claude/commands/: build.md  chore.md  clean_worktree.md  feature.md  implement.md  init_worktree.md  mark_in_progress.md  plan.md  prime.md  process_tasks.md  update_task.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: .flake8  CODEOWNERS  dependabot.yml  stale.yaml
.github/ISSUE_TEMPLATE/: adw-complete.md  adw-document.md  adw-generate.md  adw-patch.md  config.yml  planner.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: validate_notebooks.py
.github/workflows/: AIdocs.yml  CODEOWNERS  book.yml  claude-code-review.yml  claude.yml  jupyter-book-publish.yml  jupyter-book-test.yml  jupyter-book.yml  lint.yml  mkdocs.yml  notebooks.yml  opencode.yml  pylint.yml  pypi.yml  python-package-flake8.yml  python-package-lint.yml  python-package-pylint.yml  python-package-pytest-pre.yml  python-package-pytest.yml  python-package-pytype.yml  python-package-test.yml  python-package.yml  python-publish.yml  python-pypi-publish.yml  python-pypi-test.yml  stale.yml  test.yml
.opencode/: .adw-template-manifest.yaml  README.md  docs_validation_report.json  opencode.json  opencode.json.backup-20260513-172128  opencode.json.tui-migration.bak  opencode.local.example.json  opencode.openai.example.jsonc  package-lock.json  package.json  tui.json  utils.ts
.opencode/agent/: adw-auto-mode-manifest.md  adw-build-docstrings.md  adw-build-fix.md  adw-build-refine.md  adw-build-tests.md  adw-build.md  adw-commit.md  adw-docs-notebook.md  adw-format.md  adw-issue-creator.md  adw-issue-draft.md  adw-issue-review-completeness.md  adw-issue-review-description.md  adw-issue-review-scope.md  adw-issue-review-technical.md  adw-issue-review-testing.md  adw-note-writer.md  adw-polish.md  adw-review-architecture.md  adw-review-auto-orchestrator.md  adw-review-code-quality.md  adw-review-consolidation.md  adw-review-correctness.md  adw-review-cpp-performance.md  adw-review-documentation.md  adw-review-feedback-poster.md  adw-review-orchestrator.md  adw-review-python-performance.md  adw-review-security.md  adw-review-state-writer.md  adw-review-test-coverage.md  adw-setup-deploy.md  adw-setup-maintainer.md  adw-setup.md  adw-ship-fix.md  (+85 more)
.trash/: fix_notebook.py  tmp_bytes_inspect.py  tmp_char_inspect.py  tmp_check.py  tmp_control_details.py  tmp_control_search.py  tmp_dump.py  tmp_dump_snippet.py  tmp_find_controls.py  tmp_find_substring.py  tmp_fix_notebooks.py  tmp_hex.py  tmp_inspect.py  tmp_inspect_cells.py  tmp_json_check.py  tmp_print.py  tmp_replace_walledy.py  tmp_shape_inspect.py  tmp_show_bytes.py  tmp_show_chars.py  tmp_split_notebooks.py  tmp_wall_fix.py  todowrite.md
API/: index.html
Agent/: index.html
Discussions/: index.html  index.md
Examples/: index.html
Features/: index.html
How-To-Guides/: index.html
Theory/: index.html
Tutorials/: index.html  index.md
_sources/: 000_beginnings.ipynb  001_ParticleClass.ipynb  CONTRIBUTING.md  intro.md
adw-docs/: README.md  architecture_reference.md  code_culture.md  code_style.md  commit_conventions.md  conditional_docs.md  docstring_guide.md  documentation_guide.md  keyword_manifest.yaml  linting_guide.md  notebook_validation_guide.md  pr_conventions.md  review_guide.md  testing_guide.md
aerosol_dynamics/: __init__.py  environment.py  environment_test.py  parcel.py  parcel_test.py  particle.py  particle_test.py  physical_parameters.py
beta/: index.html
contribute/: index.html
development/: index.html
docs/: 000_beginnings.ipynb  001_particle.ipynb  CONTRIBUTING.md  FAQ.md  _config.yml  _toc.yml  code_specifications.md  contrib_docs.md  getting_started.ipynb  index.html  index.md  intro.md
documentation/: coagulation.html  d000_detailed_documentation.html  environment.html  intro.html  particle.html  vapor.html
examples/: activity_part1.html  chamber_smps_data.html  coagulation_demo.html  distribution_ambient.html  distribution_coagulation.html  distribution_demo.html  distribution_evolution.html  distribution_statistics.html  equilibria_part1.html  index.html  index.md  ionparticle_coagulation.html  loading_data_part1.html  loading_data_part2.html  loading_data_part3.html  loading_data_part4.html  particula_data.html  stream_stats_part1.html  stream_stats_size_distribution_part2.html  wall_loss_section.html
javascripts/: mathjax.js
jupyterbook/: 000_beginnings.ipynb
mk_generator/: index.html
next/: index.html
old-examples/: index.html
overrides/: home.html
particula/: __init__.py  _pytest_support.py  abc_builder.py  abc_factory.py  aerosol.py  aerosol_builder.py  builder_mixin.py  conftest.py  constants.py  dynamic_step.py  dynamics.py  environment.py  get_constants.py  logger_setup.py  parcel.py  particle.py  particle_distribution.py  rates.py  runnable.py  units.py  validate_inputs.py  vapor.py
partycula/: __init__.py  party.py
private/: backup_wall_loss_direct_rates_fit.py
search/: search_index.json
specs/: chore-handle-small-particle-kelvin-effect.md
strategic_plan/: Aerosol_patterns.html  strategic_planning_FY24.html
stylesheets/: extra.css
taichi/: Taichi_Exploration.ipynb  example_array.py  ti_coagulation_rate.py
tests/: test_bat_blending.py
tour/: part-tour.html
tutorial/: 01_particle.ipynb
tutorials/: 001_ParticleClass.html
(+21747 files in other folders)
