[project]
name = "particula"
description = "a simple, fast, and powerful particle simulator"
readme = "readme.md"
requires-python = ">=3.9"
license = {file = "license"}
authors = [
    {name = "Particula developers", email = "uncscode@users.noreply.github.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "atmospheric", "particles", "climate", "aerosol", "particulate"
]

dependencies = [
    "numpy", "scipy",
]

# This is set automatically by flit using `particula.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/uncscode/particula"
repository = "https://github.com/uncscode/particula"

[project.optional-dependencies]
dev = [
    "pylint", "pytest", "autopep8", "jupyterlab",
    "typing", "build", "flake8", "jupyter-book", "ghp-import",
    "mkdocs-material", "handsdown", "mkdocs-jupyter",
]
extra = [
    "matplotlib", "pandas", "tqdm", "pint",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
