[metadata]
name = particula-ngam
version = 0.0.1
author = particula authors
author_email = author@example.com
description = a simple, fast, and powerful particle simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ngam/particula
project_urls =
    Bug Tracker = https://github.com/ngam/particula/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 
