[metadata]
name = particula
version = 0.0.1
author = 'aktwo, Gorkowski, ngam, wkchuang'
author_email = 'aktwo@users.noreply.github.com, Gorkowski@users.noreply.github.com, ngam@users.noreply.github.com, wkchuang@users.noreply.github.com'
description = a simple, fast, and powerful particle simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncscode/particula
project_urls =
    Bug Tracker = https://github.com/uncscode/particula/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    importlib; python_version >= "3.6"


[options.packages.find]
where = .