[metadata]
name = particula
version = attr: particula.__version__
author = aktwo, Gorkowski, ngam, wkchuang
author_email = aktwo@users.noreply.github.com, Gorkowski@users.noreply.github.com, ngam@users.noreply.github.com, wkchuang@users.noreply.github.com
description = a simple, fast, and powerful particle simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncscode/particula
project_urls =
    Documentation = https://uncscode.github.io/particula
    Tracker = https://github.com/uncscode/particula/issues
license= MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
package_dir =
    = .
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy
    pint

[options.extras_require]
dev =
    pylint
    pytest
    autopep8
    jupyterlab
    pytype
    typing
    build
    flake8

[options.packages.find]
where = .

[pytype]
inputs = particula